test: align kitchen command handlers with locked idempotency